updated index & css

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<section>
 			<h2>Get To Know Me</h2>
 			<article>
-				<h2 style="color: #5D6D7E; font-family: cursive, sans-serif; font-size: 300%;" >Sloane Levine</h2>
+				<h2 style="color: #5D6D7E;  font-size: 300%;" >Sloane Levine</h2>
 				<h3 style="color: #85929E">Pronouns: she/her/hers</h3>
 				<p>Hi everyone! Welcome to my very own website. Before you dive in and get to know me a little better I wanted to briefly introduce myself...</p>
 				<p>My name is Sloane Levine, and I am  18 years old (which is pretty young for my grade). I grew up in a small town in Long Island, NY which is about an hour from New York City, but I currently live in Madison, WI in an off-campus apartment. This is my second year at the University of Wisconsin-Madison, and I am so happy to be able to finally experience what college is really like with in-person classes.</p> 
