Web files reupload

--- a/artwork.html
+++ b/artwork.html
@@ -21,7 +21,7 @@
 			</nav>
 		</header>
 		<section>
-			<h2 style="font-family: didot, serif;">My Artwork</h2>
+			<h2>My Artwork</h2>
 			<p>Creating art is one of my favorite things to do on my free time. I find it extremely relaxing, therapeutic, and a way to escape from reality, and I will always continue to draw and paint throughout my life. Below are some photographs of my pieces that I have made during my free time or pieces that were for my classes in college (Art 100) and high school (Drawing and Painting 1, 2, and 3 and AP Art).</p>
 			<img src="images/clock.PNG" alt="Sloane's photo" width="300" height="400">
 			<img src="images/sunset.PNG" alt="Sloane's photo" width="300" height="400">
